// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`bundle should bundle external refs 1`] = `
openapi: 3.0.0
paths:
  /pet:
    parameters:
      - $ref: '#/components/parameters/path-param'
    put:
      parameters:
        - $ref: '#/components/parameters/param-a'
        - $ref: '#/components/parameters/param-b'
        - name: test
    get:
      parameters:
        - $ref: '#/components/parameters/param-a'
        - $ref: '#/components/parameters/param-c'
    post:
      parameters:
        - $ref: '#/paths/~1pet/put/parameters/2'
components:
  parameters:
    param-a:
      name: param_a
      schema:
        $ref: '#/components/schemas/schema-a'
      examples:
        first:
          $ref: '#/components/examples/param-a-first'
        second:
          $ref: '#/components/examples/second'
    path-param:
      name: path_param
      examples:
        first:
          $ref: '#/components/examples/first'
    param-c:
      name: param_c
    param-b:
      name: param_b
  examples:
    first:
      value: b1
    param-a-first:
      value: a1
    second:
      value: a2
  schemas:
    schema-a:
      type: string

`;

exports[`bundle should bundle external refs and warn for conflicting names 1`] = `
openapi: 3.0.0
paths:
  /pet:
    parameters:
      - $ref: '#/components/parameters/path-param'
    put:
      parameters:
        - $ref: '#/components/parameters/param-b'
        - $ref: '#/components/parameters/param-b-2'
    get:
      parameters:
        - $ref: '#/components/parameters/param-a'
        - $ref: '#/components/parameters/param-c'
components:
  parameters:
    param-a:
      name: test
    param-b:
      name: param_b_alt
    path-param:
      name: path_param
    param-c:
      name: param_c
    param-b-2:
      name: param_b

`;

exports[`bundle should dereferenced correctly when used with dereference 1`] = `
openapi: 3.0.0
paths:
  /pet:
    get:
      operationId: get
      parameters:
        - name: shared-a
        - name: get_b
    post:
      operationId: post
      parameters:
        - name: shared-a
components:
  parameters:
    shared_a:
      name: shared-a

`;
